tests/NormalTests/paczka2/big_fuzzy/17856139.err
Error in line 1: RJD702 A624 7,2
Error in line 13: TKOio S750 181,62
Error in line 2: CCf A426 32,2
Error in line 15: CCf A624 15,7
Error in line 23: KX7pfi7 A6f4 ff,8
Error in line 29: Dgaco A624 74,0
Error in line 24: A624 S288 16,6
Error in line 35: A624 S750 77,4
Error in line 41: 4HdCs A624 36,6
Error in line 46: A624 A426 54,9
Error in line 52: CCf S288 32,3
Error in line 49: KX7p2i7 A426 73,5
Error in line 56: CCf S750 79,4
Error in line 59: CCf A624 99,8
Error in line 69: KX7p2i7 S288 20,3
Error in line 66: 4HdCs S288 93,2
Error in line 73: 4HdCs A426 43,9
Error in line 79: TKOio S288 )2,1
Error in line 44: RJD702 S750 148,7
Error in line 76: 4HdCs A624 48,3
Error in line 75: A624 S288 22,7
Error in line 83: A624 A624 68,4
Error in line 91: A624 S750 100,0
Error in line 80: RJD702 S288 59,2
Error in line 10: TKOio S750 47,2
Error in line 98: TKOio S288 148,2
Error in line 84: CCf S750 33,9
Error in line 99: TKOio S750 98,8
Error in line 102: Dgaco S750 7,6
Error in line 110: RJD702 A426 12,9
Error in line 121: Dgaco S288 0,0
Error in line 120: 4HdCs S288 56,1
Error in line 127: CCf A426 10,4
Error in line 129: CCf A624 468,5
Error in line 138: 4HdCs S288 40,9
Error in line 149: RJD702 A426 313,4
Error in line 157: 4HdCs A624 90,2
Error in line 153: RJD702 S288 85,7
Error in line 162: KX7p2i7 S288 64,77
Error in line 161: RJD702 A624 67,3
Error in line 166: A624 S750 72,1
Error in line 168: A624 A624 70,8
Error in line 176: RJD702 S2yy 3y,5
Error in line 169: A624 A426 95,5
Error in line 181: CCf A624 41,6
Error in line 172: RJD702 S288 14,3
Error in line 184: CCf A426 21,1
Error in line 193: CCf A426 81,9
Error in line 197: Dgaco !288 44,5
Error in line 175: KX7p2i7 S288 9,3
Error in line 195: CCf S750 63,0
Error in line 199: KX7p2i7 A426 70,7
Error in line 200: CCf A426 93,2
Error in line 192: 4HdCs A426 66,8
Error in line 216: RJD70u A6u4 46,8
Error in line 215: KX7p2i7 A624 42,0
Error in line 209: Dgaco S288 9,3
Error in line 219: KX7p2i7 A426 56,3
Error in line 220: RJD702 A624 56,6
Error in line 233: RJD702 S288 30,1
Error in line 235: A624 S750 21,1
